k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tsflow
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tsflow
  template:
    metadata:
      labels:
        app: tsflow
    spec:
      containers:
        - name: tsflow
          image: ghcr.io/rajsinghtech/tsflow:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080 
              protocol: TCP
