k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tsflow
spec:
  selector:
    app: tsflow
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
